--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@ body{
     font-family: "Share Tech Mono", monospace;
     font-weight: 400;
     font-style: normal;
+
 }
 .container{
     display: flex;
@@ -20,10 +21,11 @@ body{
     flex-flow: column;
  }
 .upbar{
-    background: brown;
+    background: #6aa52a;
     text-align: center;
-
-
+    border-style: none  none solid none;
+    border-color: rgba(0,128,255,1);
+    border-width: 4px;
 }
 
 .cconsole{
